update API to scan only one port
